# resource-simulation

./: Cargo.toml  README.md  cliff.toml  deny.toml  rustfmt.toml
.github/workflows/: build.yml
src/: cmd.rs  lib.rs  main.rs  tools.rs
src/io/: mod.rs
src/mem/: mod.rs
