[package]
name = "resource-simulation"
version = "0.1.0"
edition = "2021"
description = "系统资源模拟"
license = "MIT"
authors = ["系统资源模拟"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.4"
sysinfo = "0.30.8"
